made links effective in jumping to correct portion of page

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,6 @@
 * {
     background-color: lightyellow;
+    line-height: 200px;
 }
 
 .About {
